# lm-from-scratch

./: .gitignore  README.md  pyproject.toml
lib/: mlp.py  tokenizer.py
notebooks/: backprop.ipynb  bigram.ipynb  makemore.ipynb  micrograd.ipynb  nplm.ipynb  rnn.ipynb  scratchpad.ipynb  tokenizer.ipynb  wavenet.ipynb
