[project]
name = "lm-from-scratch"
version = "0.1.0"
description = "learning how llms work"
requires-python = ">=3.12"
dependencies = [
    "logging>=0.4.9.6",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "torch>=2.12.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
]
